TEW-2324-2-UO272109-3.6-Vista editForm.xhtml y elementos asociados.

--- a/gestioneitorv1_0/WebContent/editForm.xhtml
+++ b/gestioneitorv1_0/WebContent/editForm.xhtml
@@ -8,7 +8,15 @@
 </h:head>
 <h:body>
 
-<!-- Aquí va tu código -->
+	<h:form>
+		<h:panelGrid columns="2">
+ NOMBRE: <h:inputText value="#{controller.alumno.nombre}" />
+ APELLIDOS: <h:inputText value="#{controller.alumno.apellidos}" />
+ USERID: <h:inputText value="#{controller.alumno.iduser}" />
+ EMAIL: <h:inputText value="#{controller.alumno.email}" />
+		</h:panelGrid>
+		<h:commandButton value="Salvar" action="#{controller.salva}" />
+	</h:form>
 
 </h:body>
 </html>
