TEW-2324-2-UO272109-3.7-Vista listado.xhtml y elementos asociados

--- a/gestioneitorv1_0/WebContent/editForm.xhtml
+++ b/gestioneitorv1_0/WebContent/editForm.xhtml
@@ -15,7 +15,7 @@
  USERID: <h:inputText value="#{controller.alumno.iduser}" />
  EMAIL: <h:inputText value="#{controller.alumno.email}" />
 		</h:panelGrid>
-		<h:commandButton value="Salvar" action="#{controller.salva}" />
+		<h:commandButton value="Editar" action="#{controller.edit}" />
 	</h:form>
 
 </h:body>
