--- a/gestioneitorv1_0/WebContent/error.xhtml
+++ b/gestioneitorv1_0/WebContent/error.xhtml
@@ -3,12 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
+
+	
 <h:head>
 	<title>Error</title>
 </h:head>
 <h:body>
+<h1>This is the error page</h1>
+<br/>
+<h:outputText value="#{error.errors}" escape="false" />
 
-	<p>Algo pasó.</p>
+
+
 
 </h:body>
 </html>
