--- a/gestioneitorv1_0/WebContent/editForm.xhtml
+++ b/gestioneitorv1_0/WebContent/editForm.xhtml
@@ -2,20 +2,21 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-       xmlns:f="http://java.sun.com/jsf/core">
+       xmlns:f="http://java.sun.com/jsf/core"
+       xmlns:p="http://primefaces.org/ui">
 <h:head>
 <title>Cabecera</title> 
 </h:head>
 <h:body>
 
 	<h:form>
-		<h:panelGrid columns="2">
- NOMBRE: <h:inputText value="#{controller.alumno.nombre}" />
- APELLIDOS: <h:inputText value="#{controller.alumno.apellidos}" />
- USERID: <h:inputText value="#{controller.alumno.iduser}" />
- EMAIL: <h:inputText value="#{controller.alumno.email}" />
-		</h:panelGrid>
-		<h:commandButton value="Editar" action="#{controller.edit}" />
+		<p:panelGrid columns="2">
+ NOMBRE: <p:inputText value="#{controller.alumno.nombre}" />
+ APELLIDOS: <p:inputText value="#{controller.alumno.apellidos}" />
+ USERID: <p:inputText value="#{controller.alumno.iduser}" />
+ EMAIL: <p:inputText value="#{controller.alumno.email}" />
+		</p:panelGrid>
+		<p:commandButton value="Editar" action="#{controller.edit}" />
 	</h:form>
 
 </h:body>
