--- a/gestioneitorv1_0/WebContent/loadingError.xhtml
+++ b/gestioneitorv1_0/WebContent/loadingError.xhtml
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title>Procesando error...</title>
 </h:head>
 <h:body>
     Procesando error...
-    <f:event type="preRenderView" listener="#{error.redirectToErrorPage}" />
+    <p:event type="preRenderView" listener="#{error.redirectToErrorPage}" />
 </h:body>
 </html>
