--- a/gestioneitorv1_0/WebContent/listado.xhtml
+++ b/gestioneitorv1_0/WebContent/listado.xhtml
@@ -4,39 +4,89 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-<h:head>
-	<title>Cabecera</title>
-</h:head>
-<h:body>
+<f:view locale="#{settings.locale}">
+	<h:head>
+		<title>“#{msgs.tituloOperacionListado}”</title>
+		<style>
+		.footer {
+			position: fixed;
+			bottom: 0;
+			width: 100%; /* Ocupa todo el ancho horizontal */
+			height: 60px; /* Altura del footer */
+			background-color: #F5F5F5;
+			border-top: 3px solid #E0E0E0;
+			display: flex; /* Activar flexbox */
+			justify-content: center; /* Centrar horizontalmente */
+			align-items: center; /* Centrar verticalmente */
+		}
+		
+		.content-wrapper {
+			padding-bottom: 60px; /* Tamaño de la altura del footer */
+			min-height: 100%; /* Ocupa al menos el 100% del alto de la ventana */
+			box-sizing: border-box;
+		}
+		
+		.footer a {
+			display: inline-block;
+			color: #2B2B2B; /* Color de texto gris oscuro para contraste */
+			text-decoration: none;
+			font-weight: bold; /* Texto en negrita */
+			font-size: 20px;
+			padding: 10px 25px;
+			border-radius: 25px; /* Bordes redondeados */
+			background-color: #E0E0E0; /* Fondo gris */
+			box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+			/* Sombra sutil para darle un aspecto elevado */
+			transition: background-color 0.3s, transform 0.3s;
+			/* Transiciones suaves al pasar el ratón */
+		}
+		
+		.footer a:hover {
+			background-color: #D5D5D5;
+			/* Fondo gris un poco más oscuro al pasar el ratón */
+			transform: translateY(-2px);
+			/* Efecto de "levantamiento" al pasar el ratón */
+		}
+		
+		.footer a:active {
+			transform: translateY(0px); /* Efecto de "presionado" al hacer clic */
+		}
+	</style>
+	</h:head>
+	<h:body>
 
-	<h:form>
-		<p:dataTable var="alumno" value="#{controller.alumnos}" border="1">
-			<p:column>
-				<f:facet name="header">Nombre</f:facet>#{alumno.nombre}</p:column>
-			<p:column>
-				<f:facet name="header">Apellidos</f:facet>#{alumno.apellidos}</p:column>
-			<p:column>
-				<f:facet name="header">IdUser</f:facet>#{alumno.iduser}</p:column>
-			<p:column>
-				<f:facet name="header">Email</f:facet>#{alumno.email}</p:column>
-			<p:column>
-				<f:facet name="header">Baja</f:facet>
-				<p:commandLink action="#{controller.baja}" type="submit"
-					value="BAJA" immediate="true">
-					<f:setPropertyActionListener target="#{controller.alumno}"
-						value="#{alumno}" />
-				</p:commandLink>
-			</p:column>
-			<p:column>
-				<f:facet name="header">Edición</f:facet>
-				<p:commandLink action="editar" type="submit" value="EDITAR"
-					immediate="true">
-					<f:setPropertyActionListener target="#{controller.alumno}"
-						value="#{alumno}" />
-				</p:commandLink>
-			</p:column>
-		</p:dataTable>
-	</h:form>
+		<h:form>
+			<p:dataTable var="alumno" value="#{controller.alumnos}" border="1">
+				<p:column>
+					<f:facet name="header">#{msgs.tablaNombre}</f:facet>#{alumno.nombre}</p:column>
+				<p:column>
+					<f:facet name="header">#{msgs.tablaApellidos}</f:facet>#{alumno.apellidos}</p:column>
+				<p:column>
+					<f:facet name="header">#{msgs.tablaIdUser}</f:facet>#{alumno.iduser}</p:column>
+				<p:column>
+					<f:facet name="header">#{msgs.tablaCorreo}</f:facet>#{alumno.email}</p:column>
+				<p:column>
+					<f:facet name="header">#{msgs.tablaBaja}</f:facet>
+					<p:commandLink action="#{controller.baja}" type="submit"
+						value="#{msgs.enlaceBaja}" immediate="true">
+						<f:setPropertyActionListener target="#{controller.alumno}"
+							value="#{alumno}" />
+					</p:commandLink>
+				</p:column>
+				<p:column>
+					<f:facet name="header">#{msgs.tablaEditar}</f:facet>
+					<p:commandLink action="editar" type="submit"
+						value="#{msgs.enlaceEditar}" immediate="true">
+						<f:setPropertyActionListener target="#{controller.alumno}"
+							value="#{alumno}" />
+					</p:commandLink>
+				</p:column>
+			</p:dataTable>
+			<div class="footer">
+				<h:commandLink value="#{msgs.enlaceCasa}" action="home" />
+			</div>
+		</h:form>
 
-</h:body>
+	</h:body>
+</f:view>
 </html>
