--- a/gestioneitorv1_0/WebContent/index.xhtml
+++ b/gestioneitorv1_0/WebContent/index.xhtml
@@ -12,50 +12,50 @@
 	<h:head>
 		<title>"#{msgs.tituloAplicacion1}"</title>
 		<style>
-		.footer {
-			position: fixed;
-			bottom: 0;
-			width: 100%; /* Ocupa todo el ancho horizontal */
-			height: 60px; /* Altura del footer */
-			background-color: #F5F5F5;
-			border-top: 3px solid #E0E0E0;
-			display: flex; /* Activar flexbox */
-			justify-content: center; /* Centrar horizontalmente */
-			align-items: center; /* Centrar verticalmente */
-		}
-		
-		.content-wrapper {
-			padding-bottom: 60px; /* Tamaño de la altura del footer */
-			min-height: 100%; /* Ocupa al menos el 100% del alto de la ventana */
-			box-sizing: border-box;
-		}
-		
-		.footer a {
-			display: inline-block;
-			color: #2B2B2B; /* Color de texto gris oscuro para contraste */
-			text-decoration: none;
-			font-weight: bold; /* Texto en negrita */
-			font-size: 20px;
-			padding: 10px 25px;
-			border-radius: 25px; /* Bordes redondeados */
-			background-color: #E0E0E0; /* Fondo gris */
-			box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-			/* Sombra sutil para darle un aspecto elevado */
-			transition: background-color 0.3s, transform 0.3s;
-			/* Transiciones suaves al pasar el ratón */
-		}
-		
-		.footer a:hover {
-			background-color: #D5D5D5;
-			/* Fondo gris un poco más oscuro al pasar el ratón */
-			transform: translateY(-2px);
-			/* Efecto de "levantamiento" al pasar el ratón */
-		}
-		
-		.footer a:active {
-			transform: translateY(0px); /* Efecto de "presionado" al hacer clic */
-		}
-	</style>
+.footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%; /* Ocupa todo el ancho horizontal */
+	height: 60px; /* Altura del footer */
+	background-color: #F5F5F5;
+	border-top: 3px solid #E0E0E0;
+	display: flex; /* Activar flexbox */
+	justify-content: center; /* Centrar horizontalmente */
+	align-items: center; /* Centrar verticalmente */
+}
+
+.content-wrapper {
+	padding-bottom: 60px; /* Tamaño de la altura del footer */
+	min-height: 100%; /* Ocupa al menos el 100% del alto de la ventana */
+	box-sizing: border-box;
+}
+
+.footer a {
+	display: inline-block;
+	color: #2B2B2B; /* Color de texto gris oscuro para contraste */
+	text-decoration: none;
+	font-weight: bold; /* Texto en negrita */
+	font-size: 20px;
+	padding: 10px 25px;
+	border-radius: 25px; /* Bordes redondeados */
+	background-color: #E0E0E0; /* Fondo gris */
+	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+	/* Sombra sutil para darle un aspecto elevado */
+	transition: background-color 0.3s, transform 0.3s;
+	/* Transiciones suaves al pasar el ratón */
+}
+
+.footer a:hover {
+	background-color: #D5D5D5;
+	/* Fondo gris un poco más oscuro al pasar el ratón */
+	transform: translateY(-2px);
+	/* Efecto de "levantamiento" al pasar el ratón */
+}
+
+.footer a:active {
+	transform: translateY(0px); /* Efecto de "presionado" al hacer clic */
+}
+</style>
 	</h:head>
 	<h:body>
 
@@ -71,20 +71,19 @@
 						action="#{controller.listado}"></p:menuitem>
 				</p:submenu>
 
-				<f:facet name="options">
-					<h:commandLink value="#{msgs.enlaceIdiomaES}"
-						actionListener="#{settings.setSpanish}">
-					</h:commandLink>
-					<h:commandLink value="#{msgs.enlaceIdiomaEN}"
-						actionListener="#{settings.setEnglish}">
-					</h:commandLink>
-				</f:facet>
+	
 
 			</p:menubar>
 
-			<div class="footer">
-				<h:commandLink value="#{msgs.enlaceCasa}" action="home" />
-			</div>
+			<nav class="footer">
+				<h:commandLink value="#{msgs.enlaceCasa}" action="home" style="margin-right: 20px;" />
+				<h:commandLink value="#{msgs.enlaceIdiomaES}   🇪🇸"
+						actionListener="#{settings.setSpanish}" style="margin-right: 10px;">
+				</h:commandLink>
+				<h:commandLink value="#{msgs.enlaceIdiomaEN}   🇬🇧"
+						actionListener="#{settings.setEnglish}">
+				</h:commandLink>
+			</nav>
 		</h:form>
 
 
