--- a/gestioneitorv1_0/WebContent/editForm.xhtml
+++ b/gestioneitorv1_0/WebContent/editForm.xhtml
@@ -64,10 +64,10 @@
  #{msgs.correo} <p:inputText value="#{controller.alumno.email}" />
 			</p:panelGrid>
 			<p:commandButton value="#{msgs.enlaceEditar}"
-				action="#{controller.edit}" />
+				action="#{controller.salva}" />
 			<nav class="footer"> <h:commandLink value="#{msgs.enlaceCasa}"
 				action="home" style="margin-right: 20px;" /> <h:commandLink
-				value="#{msgs.enlaceIdiomaES}   s🇪🇸"
+				value="#{msgs.enlaceIdiomaES}   🇪🇸"
 				actionListener="#{settings.setSpanish}" style="margin-right: 10px;">
 			</h:commandLink> <h:commandLink value="#{msgs.enlaceIdiomaEN}   🇬🇧"
 				actionListener="#{settings.setEnglish}">
