--- a/gestioneitorv1_0/WebContent/listado.xhtml
+++ b/gestioneitorv1_0/WebContent/listado.xhtml
@@ -56,29 +56,27 @@
 	<h:body>
 
 		<h:form>
-			<p:dataTable var="alumno" value="#{controller.alumnos}" border="1">
+			<p:dataTable var="valumno" value="#{controller.alumnos}" border="1">
 				<p:column>
-					<f:facet name="header">#{msgs.tablaNombre}</f:facet>#{alumno.nombre}</p:column>
+					<f:facet name="header">#{msgs.tablaNombre}</f:facet>#{valumno.nombre}</p:column>
 				<p:column>
-					<f:facet name="header">#{msgs.tablaApellidos}</f:facet>#{alumno.apellidos}</p:column>
+					<f:facet name="header">#{msgs.tablaApellidos}</f:facet>#{valumno.apellidos}</p:column>
 				<p:column>
-					<f:facet name="header">#{msgs.tablaIdUser}</f:facet>#{alumno.iduser}</p:column>
+					<f:facet name="header">#{msgs.tablaIdUser}</f:facet>#{valumno.iduser}</p:column>
 				<p:column>
-					<f:facet name="header">#{msgs.tablaCorreo}</f:facet>#{alumno.email}</p:column>
+					<f:facet name="header">#{msgs.tablaCorreo}</f:facet>#{valumno.email}</p:column>
 				<p:column>
 					<f:facet name="header">#{msgs.tablaBaja}</f:facet>
-					<p:commandLink action="#{controller.baja}" type="submit"
+					<p:commandLink action="#{controller.baja(valumno)}" type="submit"
 						value="#{msgs.enlaceBaja}" immediate="true">
-						<f:setPropertyActionListener target="#{controller.alumno}"
-							value="#{alumno}" />
+						
 					</p:commandLink>
 				</p:column>
 				<p:column>
 					<f:facet name="header">#{msgs.tablaEditar}</f:facet>
 					<p:commandLink action="editar" type="submit"
-						value="#{msgs.enlaceEditar}" immediate="true">
-						<f:setPropertyActionListener target="#{controller.alumno}"
-							value="#{alumno}" />
+						value="#{msgs.enlaceEditar}" immediate="true" actionListener="#{alumno.setAlumno(valumno)}">
+
 					</p:commandLink>
 				</p:column>
 			</p:dataTable>
